index.html: added images

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <figure class="exp-figure">
           <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
           <img id="desktop-img-figure" src="images/img-original/exp-4.jpg" alt="horsing around"/>
-
+          <img id="tablet-img-figure" src="images/img-tablet/tab-exp-4.jpg" alt="horsing around"/>
           <figcaption>
 
             <p>
@@ -107,7 +107,7 @@
         <figure class="exp-figure">
           <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
           <img id="desktop-img-figure" src="images/img-original/exp-4.jpg" alt="horsing around"/>
-
+          <img id="tablet-img-figure" src="images/img-tablet/tab-exp-4.jpg" alt="horsing around"/>
           <figcaption>
 
             <p>
@@ -131,7 +131,7 @@
         <figure class="exp-figure">
           <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
           <img id="desktop-img-figure" src="images/img-original/exp-4.jpg" alt="horsing around"/>
-
+          <img id="tablet-img-figure" src="images/img-tablet/tab-exp-4.jpg" alt="horsing around"/>
           <figcaption>
 
             <p>
@@ -155,7 +155,7 @@
         <figure class="exp-figure">
           <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
           <img id="desktop-img-figure" src="images/img-original/exp-4.jpg" alt="horsing around"/>
-
+          <img id="tablet-img-figure" src="images/img-tablet/tab-exp-4.jpg" alt="horsing around"/>
           <figcaption>
 
             <p>
@@ -179,6 +179,7 @@
         <figure class="exp-figure">
           <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
           <img id="desktop-img-figure" src="images/img-original/exp-4.jpg" alt="horsing around"/>
+          <img id="tablet-img-figure" src="images/img-tablet/tab-exp-4.jpg" alt="horsing around"/>
 
           <figcaption>
 
