index.html: added all img resized for tablet mediaquery in <aside>

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       <figure class="exp-figure">
         <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
         <img id="desktop-img-figure" src="images/img-original/exp-4.jpg" alt="horsing around"/>
-
+        <img id="tablet-img-figure" src="images/img-tablet/tab-exp-4.jpg" alt="horsing around"/>
           <figcaption>
 
             <p>
@@ -242,7 +242,7 @@
         <figure class="exp-figure">
           <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
           <img id="desktop-img-figure" src="images/img-original/exp-4.jpg" alt="horsing around"/>
-
+          <img id="tablet-img-figure" src="images/img-tablet/tab-exp-4.jpg" alt="horsing around"/>
           <figcaption>
 
             <p>
@@ -266,7 +266,7 @@
         <figure class="exp-figure">
           <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
           <img id="desktop-img-figure" src="images/img-original/exp-4.jpg" alt="horsing around"/>
-
+          <img id="tablet-img-figure" src="images/img-tablet/tab-exp-4.jpg" alt="horsing around"/>
           <figcaption>
 
             <p>
@@ -290,7 +290,7 @@
         <figure class="exp-figure">
           <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
           <img id="desktop-img-figure" src="images/img-original/exp-4.jpg" alt="horsing around"/>
-
+          <img id="tablet-img-figure" src="images/img-tablet/tab-exp-4.jpg" alt="horsing around"/>
           <figcaption>
 
             <p>
@@ -315,7 +315,7 @@
 
           <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
           <img id="desktop-img-figure" src="images/img-original/exp-4.jpg" alt="horsing around"/>
-
+          <img id="tablet-img-figure" src="images/img-tablet/tab-exp-4.jpg" alt="horsing around"/>
           <figcaption>
 
             <p>
@@ -353,7 +353,7 @@
 
           <img id="mobile-img-figure" src="images/img-mobile/logement-240x160.jpg" alt="accommodation in berlin"/>
           <img id="desktop-img-figure" src="images/img-original/logement.jpg" alt="accommodation in berlin"/>
-
+          <img id="tablet-img-figure" src="images/img-tablet/tab-logement.jpg" alt="accommodation in berlin"/>
           <figcaption>
 
             <p>
@@ -382,7 +382,7 @@
 
           <img id="mobile-img-figure" src="images/img-mobile/logement-240x160.jpg" alt="accommodation in berlin"/>
           <img id="desktop-img-figure" src="images/img-original/logement.jpg" alt="accommodation in berlin"/>
-
+          <img id="tablet-img-figure" src="images/img-tablet/tab-logement.jpg" alt="accommodation in berlin"/>
           <figcaption>
 
             <p>
@@ -410,7 +410,7 @@
         <figure class="logements-figure">
           <img id="mobile-img-figure" src="images/img-mobile/logement-240x160.jpg" alt="accommodation in berlin"/>
           <img id="desktop-img-figure" src="images/img-original/logement.jpg" alt="accommodation in berlin"/>
-
+          <img id="tablet-img-figure" src="images/img-tablet/tab-logement.jpg" alt="accommodation in berlin"/>
           <figcaption>
 
             <p>
@@ -450,6 +450,8 @@
         <figure class="destinations-figure">
           <img id="mobile-img-figure" src="images/img-mobile/city-2-114x177.jpg" alt="tokyo"/>
           <img id="desktop-img-figure" src="images/img-original/city-2.jpg" alt="tokyo"/>
+          <img id="tablet-img-figure" src="images/img-tablet/tab-city-2.jpg" alt="tokyo"/>
+
           <figcaption>
             <h3>Tokyo</h3>
           </figcaption>
@@ -458,6 +460,7 @@
         <figure class="destinations-figure">
           <img id="mobile-img-figure" src="images/img-mobile/city-2-114x177.jpg" alt="tokyo"/>
           <img id="desktop-img-figure" src="images/img-original/city-2.jpg" alt="tokyo"/>
+          <img id="tablet-img-figure" src="images/img-tablet/tab-city-2.jpg" alt="tokyo"/>
           <figcaption>
             <h3>Tokyo</h3>
           </figcaption>
@@ -466,6 +469,7 @@
         <figure class="destinations-figure">
           <img id="mobile-img-figure" src="images/img-mobile/city-2-114x177.jpg" alt="tokyo"/>
           <img id="desktop-img-figure" src="images/img-original/city-2.jpg" alt="tokyo"/>
+          <img id="tablet-img-figure" src="images/img-tablet/tab-city-2.jpg" alt="tokyo"/>
           <figcaption>
             <h3>Tokyo</h3>
           </figcaption>
@@ -474,6 +478,8 @@
         <figure class="destinations-figure">
           <img id="mobile-img-figure" src="images/img-mobile/city-2-114x177.jpg" alt="tokyo"/>
           <img id="desktop-img-figure" src="images/img-original/city-2.jpg" alt="tokyo"/>
+          <img id="tablet-img-figure" src="images/img-tablet/tab-city-2.jpg" alt="tokyo"/>
+
           <figcaption>
             <h3>Tokyo</h3>
           </figcaption>
@@ -482,6 +488,8 @@
         <figure class="destinations-figure">
           <img id="mobile-img-figure" src="images/img-mobile/city-2-114x177.jpg" alt="tokyo"/>
           <img id="desktop-img-figure" src="images/img-original/city-2.jpg" alt="tokyo"/>
+          <img id="tablet-img-figure" src="images/img-tablet/tab-city-2.jpg" alt="tokyo"/>
+
           <figcaption>
             <h3>Tokyo</h3>
           </figcaption>
@@ -490,6 +498,8 @@
         <figure class="destinations-figure">
           <img id="mobile-img-figure" src="images/img-mobile/city-2-114x177.jpg" alt="tokyo"/>
           <img id="desktop-img-figure" src="images/img-original/city-2.jpg" alt="tokyo"/>
+          <img id="tablet-img-figure" src="images/img-tablet/tab-city-2.jpg" alt="tokyo"/>
+
           <figcaption>
             <h3>Tokyo</h3>
           </figcaption>
