updated img host from id to class

--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
       <!-- img visible according to mediaquery -->
 
       <img class="mobile-img" src="images/img-mobile/host-414x217.jpg" alt="host family" />
-      <img id="desktop-img" src="images/img-original/hosts.jpg" alt="host family" />
+      <img class="desktop-img" src="images/img-original/hosts.jpg" alt="host family" />
 
       <div class="hosts-section">
 
