updated index.html and styles.css with <form> (mobile-first)

--- a/index.html
+++ b/index.html
@@ -25,12 +25,22 @@
         <img src="img/icons/logo-34x34.png" alt="airbnb logo"/>
         <img id="arrow-img-header" src="img/icons/arrow.png" alt="menu icon"  />
       </header>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+      <main>
+        <h1>
+          <span>Airbnb</span>
+          Book unique homes and experience a city like local.
+        </h1>
+
+        <form>
+          <img src="img/icons/search-18x18.png" alt="search icon" />
+          <p>Partout · Dates indifférentes · 1 voyageur</p>
+        </form>
+
+
+
+      </main>
+
 
 
 
