index.html / styles.css : added in <main> : the <nav>

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
           <p>Partout · Dates indifférentes · 1 voyageur</p>
         </form>
 
+        <nav>
+          <a href="#"><span>For You</span></a>
+          <a href="#">Homes</a>
+          <a href="#">Experiences</a>
+          <a href="#">Places</a>
+        </nav>
+
 
 
       </main>
