index.html / styles.css : added x3 sections (experience / homes / cities categories)

--- a/index.html
+++ b/index.html
@@ -44,10 +44,271 @@
           <a href="#">Places</a>
         </nav>
 
+        <section>  <!-- section featuring experiences category -->
+          <h2>Experiences</h2>
 
+          <div>
+            <figure class="experience">
+              <img class="figure-img" src="img/xp-1.jpg" alt="experience"/>
 
+              <figcaption>
+                <p>
+                  <span>60€</span>
+                  Neque porro quisquam est qui dolorem ipsum quia dolor sit amet
+                </p>
+
+                <div class="rating">
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <p>30 comments</p>
+                </div>
+              </figcaption>
+            </figure>
+
+            <figure class="experience">
+              <img class="figure-img" src="img/xp-2.jpg" alt="experience"/>
+
+              <figcaption>
+                <p>
+                  <span>60€</span>
+                  Neque porro quisquam est qui dolorem ipsum quia dolor sit amet
+                </p>
+
+                <div class="rating">
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <p>30 comments</p>
+                </div>
+              </figcaption>
+            </figure>
+
+            <figure class="experience">
+              <img class="figure-img" src="img/xp-3.jpg" alt="experience"/>
+
+              <figcaption>
+                <p>
+                  <span>60€</span>
+                  Neque porro quisquam est qui dolorem ipsum quia dolor sit amet
+                </p>
+
+                <div class="rating">
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <p>30 comments</p>
+                </div>
+              </figcaption>
+            </figure>
+
+            <figure class="experience">
+              <img class="figure-img" src="img/xp-4.jpg" alt="experience"/>
+
+              <figcaption>
+                <p>
+                  <span>60€</span>
+                  Neque porro quisquam est qui dolorem ipsum quia dolor sit amet
+                </p>
+
+                <div class="rating">
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <p>30 comments</p>
+                </div>
+              </figcaption>
+            </figure>
+
+            <figure class="experience">
+              <img class="figure-img" src="img/xp-5.jpg" alt="experience"/>
+
+              <figcaption>
+                <p>
+                  <span>60€</span>
+                  Neque porro quisquam est qui dolorem ipsum quia dolor sit amet
+                </p>
+
+                <div class="rating">
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <p>30 comments</p>
+                </div>
+              </figcaption>
+            </figure>
+
+          </div>
+
+        </section>
+
+        <section> <!-- section featuring accomodation category -->
+          <h2>Homes</h2>
+
+          <div>
+            <figure class="home">
+              <img class="figure-img" src="img/home-1.jpg" alt="home"/>
+              <figcaption>
+                <p>
+                  <span>120€ Home sweet home</span><br>
+                  Neque porro quisquam - 4 beds
+                </p>
+                <div class="rating">
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <p>30 comments</p>
+                </div>
+              </figcaption>
+            </figure>
+            <figure class="home">
+              <img class="figure-img" src="img/home-2.jpg" alt="home"/>
+              <figcaption>
+                <p>
+                  <span>120€ Home sweet home</span><br>
+                  Neque porro quisquam - 4 beds
+                </p>
+                <div class="rating">
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <p>30 comments</p>
+                </div>
+              </figcaption>
+            </figure>
+            <figure class="home">
+              <img class="figure-img" src="img/home-3.jpg" alt="home"/>
+              <figcaption>
+                <p>
+                  <span>120€ Home sweet home</span><br>
+                  Neque porro quisquam - 4 beds
+                </p>
+                <div class="rating">
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <p>30 comments</p>
+                </div>
+              </figcaption>
+            </figure>
+            <figure class="home">
+              <img class="figure-img" src="img/home-4.jpg" alt="home"/>
+              <figcaption>
+                <p>
+                  <span>120€ Home sweet home</span><br>
+                  Neque porro quisquam - 4 beds
+                </p>
+                <div class="rating">
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <p>30 comments</p>
+                </div>
+              </figcaption>
+            </figure>
+            <figure class="home">
+              <img class="figure-img" src="img/home-5.jpg" alt="home"/>
+              <figcaption>
+                <p>
+                  <span>120€ Home sweet home</span><br>
+                  Neque porro quisquam - 4 beds
+                </p>
+                <div class="rating">
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <p>30 comments</p>
+                </div>
+              </figcaption>
+            </figure>
+            <figure class="home">
+              <img class="figure-img" src="img/home-6.jpg" alt="home"/>
+              <figcaption>
+                <p>
+                  <span>120€ Home sweet home</span><br>
+                  Neque porro quisquam - 4 beds
+                </p>
+                <div class="rating">
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <img src="img/icons/star.png" alt="star rating" />
+                  <p>30 comments</p>
+                </div>
+              </figcaption>
+            </figure>
+          </div>
+        </section>
+
+        <section>  <!-- section featuring destination category -->
+          <h2>Featured Destinations</h2>
+
+          <div>
+            <figure class="city">
+              <img class="figure-img" src="img/city-1.jpg" alt="destination"/>
+              <figcaption><p><span>Paris</span></p></figcaption>
+            </figure>
+            <figure class="city">
+              <img class="figure-img" src="img/city-2.jpg" alt="destination"/>
+              <figcaption><p><span>Los Angeles</span></p></figcaption>
+            </figure>
+            <figure class="city">
+              <img class="figure-img" src="img/city-3.jpg" alt="destination"/>
+              <figcaption><p><span>London</span></p></figcaption>
+            </figure>
+            <figure class="city">
+              <img class="figure-img" src="img/city-4.jpg" alt="destination"/>
+              <figcaption><p><span>Miami</span></p></figcaption>
+            </figure>
+            <figure class="city">
+              <img class="figure-img" src="img/city-5.jpg" alt="destination"/>
+              <figcaption><p><span>Tokyo</span></p></figcaption>
+            </figure>
+            <figure class="city">
+              <img class="figure-img" src="img/city-6.jpg" alt="destination"/>
+              <figcaption><p><span>San Francisco</span></p></figcaption>
+            </figure>
+            <figure class="city">
+              <img class="figure-img" src="img/city-7.jpg" alt="destination"/>
+              <figcaption><p><span>Seoul</span></p></figcaption>
+            </figure>
+            <figure class="city">
+              <img class="figure-img" src="img/city-8.jpg" alt="destination"/>
+              <figcaption><p><span>Cape Town</span></p></figcaption>
+            </figure>
+            <figure class="city">
+              <img class="figure-img" src="img/city-9.jpg" alt="destination"/>
+              <figcaption><p><span>Nairobi</span></p></figcaption>
+            </figure>
+          </div>
+        </section>
       </main>
 
+      <!-- footer -->
+      <footer>
+        
+      </footer>
 
 
 
@@ -57,10 +318,11 @@
 
 
 
-        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+
+        <!-- <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/main.js"></script> -->
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
