index.html / styles.css : added <footer>

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <form>
           <img src="img/icons/search-18x18.png" alt="search icon" />
-          <p>Partout · Dates indifférentes · 1 voyageur</p>
+          <p>Anyhere · Anytime · 1 guest</p>
         </form>
 
         <nav>
@@ -307,7 +307,37 @@
 
       <!-- footer -->
       <footer>
-        
+        <aside class="dropdowns">
+          <select name="language" id="language">
+            <option>English</option>
+            <option>Français</option>
+            <option>Grolandais</option>
+          </select>
+
+          <select name="currency" id="currency">
+            <option>EUR</option>
+            <option>USD</option>
+            <option>EUGRO</option>
+          </select>
+        </aside>
+
+        <aside class="corporateinfo">
+          <div class="corporate">
+            <img src="img/icons/logo-grey.png" alt="airbnb logo" />
+            <h4>Airbnb, Inc.</h4>
+          </div>
+
+          <div class="links">
+            <a href="#">Terms</a>
+            <a href="#">Privacy</a>
+            <a href="#">Site Map</a>
+            <img src="img/icons/facebook.png" alt="facebook icon" />
+            <img src="img/icons/twitter.png" alt="twitter icon" />
+            <img src="img/icons/instagram.png" alt="instagram icon" />
+          </div>
+
+        </aside>
+
       </footer>
 
 
