index.html / styles.css : adjusted h1 and footer margins

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
       <main>
         <h1>
-          <span>Airbnb</span>
+          <span>Airbnb</span><br />
           Book unique homes and experience a city like local.
         </h1>
 
         <form>
           <img src="img/icons/search-18x18.png" alt="search icon" />
-          <p>Anyhere · Anytime · 1 guest</p>
+          <p>Anywhere · Anytime · 1 guest</p>
         </form>
 
         <nav>
