index.html / styles.css : adapted <footer> and added within an <aside> with links @mediaquery tablet

--- a/index.html
+++ b/index.html
@@ -364,6 +364,34 @@
           </select>
         </aside>
 
+        <aside class="tablet">
+          <div class="menu">
+            <h3>Airbnb</h3>
+            <a href="#">About us</a>
+            <a href="#">Careers</a>
+            <a href="#">Press</a>
+            <a href="#">Policies</a>
+            <a href="#">Help</a>
+            <a href="#">Diversity & Belonging</a>
+          </div>
+          <div class="menu">
+            <h3>Discovery</h3>
+            <a href="#">Trust & Safety</a>
+            <a href="#">Travel Credit</a>
+            <a href="#">Gift Cards</a>
+            <a href="#">Airbnb Citizen</a>
+            <a href="#">Business Travel</a>
+            <a href="#">Guidebooks</a>
+          </div>
+          <div class="menu">
+            <h3>Hosting</h3>
+            <a href="#">Why Host</a>
+            <a href="#">Hospitality</a>
+            <a href="#">Responsible Hosting</a>
+            <a href="#">Community Center</a>
+          </div>
+        </aside>
+
         <aside class="corporateinfo">
           <div class="corporate">
             <img src="img/icons/logo-grey.png" alt="airbnb logo" />
