index.html / styles.css : adapted <header> and added <nav> @mediaquery desktop

--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
 
       <header>
         <img src="img/icons/logo-34x34.png" alt="airbnb logo"/>
-        <img id="arrow-img-header" src="img/icons/arrow.png" alt="menu icon"  />
+        <img class="arrow" src="img/icons/arrow.png" alt="menu icon"  />
+
+        <nav class="desktop"> <!-- visible desktop only -->
+          <a href="#">Become a Host</a>
+          <a href="#">Help</a>
+          <a href="#">Sign Up</a>
+          <a href="#">Log In</a>
+        </nav>
+
+
       </header>
 
       <main>
