updated airbnb logo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <body>
 
       <header>
-        <img src="img/icons/logo-34x34.png" alt="airbnb logo"/>
+        <img src="img/icons/logo.png" alt="airbnb logo"/>
         <img class="arrow" src="img/icons/arrow.png" alt="menu icon"  />
 
         <nav class="desktop"> <!-- visible desktop only -->
