--- a/index.html
+++ b/index.html
@@ -48,17 +48,30 @@
 
         <form class="tablet">
           <div>
+            <p class="desktop">Where</p>
             <img src="img/icons/search-18x18.png" alt="search icon" />
             <p>Anywhere</p>
           </div>
           <div>
+            <p class="desktop">When</p>
             <img src="img/icons/calendar.png" alt="search icon" />
             <p>Anytime</p>
           </div>
-          <div>
+          <div class="hide"> <!-- hidden @mediaquery desktop-->
             <img src="img/icons/guests.png" alt="search icon" />
             <p>1 guest</p>
           </div>
+          <div class="desktop flex-between">  <!-- display @mediaquery desktop-->
+            <div>
+              <p class>Guests</p>
+              <p>1 guest</p>
+            </div>
+            <button id="button-form" class="desktop" type="submit" value="Rechercher">
+              <span>Search</span>
+            </button>       <!-- mediaquery // only visible in desktop -->
+          </div>
+
+
         </form>
 
         <!-- mediaquery // visible in desktop and tablet -->
