--- a/index.html
+++ b/index.html
@@ -64,7 +64,13 @@
           <div class="desktop flex-between">  <!-- display @mediaquery desktop-->
             <div>
               <p class>Guests</p>
-              <p>1 guest</p>
+              <p class="hide">1 guest</p>
+              <select name="1 guest" id="guests">
+                <option>1 guest</option>
+                <option>2 guests</option>
+                <option>3 guests</option>
+                <option>4 guests</option>
+              </select>
             </div>
             <button id="button-form" class="desktop" type="submit" value="Rechercher">
               <span>Search</span>
